import from word

--- a/ignore/ui.ui
+++ b/ignore/ui.ui
@@ -332,8 +332,8 @@
        <enum>Qt::LeftToRight</enum>
       </property>
       <property name="text">
-       <string>Название 
-проекта:</string>
+       <string>Наименование
+объекта:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
